rounded some corners and fixed the navbar z-index

--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,13 @@ body {
     background-color: #282828;
     height: 1000px;
     margin: 0px;
+    border-radius: 5px;
 }
 
 #likedGamesTitle {
     border-bottom: 2px solid white;
     color: white;
-    margin: 2px 0px;
+    margin: 2px 5px;
 }
 
 .gameList {
@@ -49,6 +50,9 @@ body {
     bottom: 30px;
     color: white;
     background-color: #282828;
+    margin-right: 5px;
+    margin-top: 2px;
+    border-radius: 5px;
 }
 
 #sortLabel {
@@ -57,6 +61,7 @@ body {
     position: relative;
     bottom: 30px;
     margin-right: 5px;
+    margin-top:2px;
 }
 
 #gameDetailsTitle {
@@ -243,16 +248,16 @@ tr:nth-child(even) {
     color: white;
 }
 
-div.topBar {
-    position: -webkit-sticky;
+.topBar {
     position: sticky;
     top: 0;
     background-color: #282828;
     display: grid;
     grid-template-columns: 33% 33% 33%;
-    padding: 2px;
-    width: 100%;
+    padding: 5px;
     height: 30px;
+    border-radius: 5px;
+    z-index: 1;
 }
 
 .backfowardDiv {
